dodanie description species do experiment klasa image- nie działa pobieranie danych z form w experiment>create view

--- a/FermaOnline/FermaOnline.csproj
+++ b/FermaOnline/FermaOnline.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="wwwroot\img\ExperimentImages\" />
   </ItemGroup>
 
   <ItemGroup>
