Działający update plików

--- a/FermaOnline/FermaOnline.csproj
+++ b/FermaOnline/FermaOnline.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="wwwroot\UploadedFiles\" />
+    <Folder Include="UserFiles\" />
   </ItemGroup>
 
   <ItemGroup>
