--- a/FermaOnline/FermaOnline.csproj
+++ b/FermaOnline/FermaOnline.csproj
@@ -5,9 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Files\3007\**" />
     <Compile Remove="wwwroot\img\ExperimentImages\**" />
+    <Content Remove="Files\3007\**" />
     <Content Remove="wwwroot\img\ExperimentImages\**" />
+    <EmbeddedResource Remove="Files\3007\**" />
     <EmbeddedResource Remove="wwwroot\img\ExperimentImages\**" />
+    <None Remove="Files\3007\**" />
     <None Remove="wwwroot\img\ExperimentImages\**" />
   </ItemGroup>
 
@@ -28,7 +32,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Files\3007\" />
+    <Folder Include="Files\" />
   </ItemGroup>
 
   <ItemGroup>
